--- a/junk journals.html
+++ b/junk journals.html
@@ -15,7 +15,7 @@
     </button>
 
     <nav class="navbar">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="videos.html">Videos</a>
       <a href="gallery.html">Gallery</a>
       <a href="blog.html">Blog</a>
@@ -27,8 +27,8 @@
           <a href="baby.html">Baby Journals</a>
           <a href="prayer.html">Prayer Journals</a>
           <a href="golden.html">Little Golden Book Journals</a>
-          <a href="Wedding.html">Wedding Journals</a>
-          <a href="Graduation.html">Graduation Journals</a>
+          <a href="wedding.html">Wedding Journals</a>
+          <a href="graduation.html">Graduation Journals</a>
         </div>
       </div>
 
