--- a/prayer.html
+++ b/prayer.html
@@ -16,7 +16,7 @@
     </button>
 
     <nav class="navbar">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="videos.html">Videos</a>
       <a href="gallery.html">Gallery</a>
       <a href="blog.html">Blog</a>
