--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Videos | Sharon's Crafty Life</title>
-  <link rel="stylesheet" href="CSS-style.css">
+  <link rel="stylesheet" href="css-style.css">
 </head>
 
 <body style="margin:0; font-family: Arial, sans-serif; background:#f1e3ea;">
@@ -16,7 +16,7 @@
     </button>
 
     <nav class="navbar">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="videos.html">Videos</a>
       <a href="gallery.html">Gallery</a>
       <a href="blog.html">Blog</a>
@@ -28,8 +28,8 @@
           <a href="baby.html">Baby Journals</a>
           <a href="prayer.html">Prayer Journals</a>
           <a href="golden.html">Little Golden Book Journals</a>
-          <a href="Wedding.html">Wedding Journals</a>
-          <a href="Graduation.html">Graduation Journals</a>
+          <a href="wedding.html">Wedding Journals</a>
+          <a href="graduation.html">Graduation Journals</a>
         </div>
       </div>
 
