--- a/wedding.html
+++ b/wedding.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wedding Journals | Sharon's Crafty Life</title>
-  <link rel="stylesheet" href="CSS-style.css">
+  <link rel="stylesheet" href="css-style.css">
 </head>
 
 <body style="margin:0; font-family: Arial, sans-serif; background:#f1e3ea;">
@@ -16,7 +16,7 @@
     </button>
 
     <nav class="navbar">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="videos.html">Videos</a>
       <a href="gallery.html">Gallery</a>
       <a href="blog.html">Blog</a>
