--- a/gallery.html
+++ b/gallery.html
@@ -134,7 +134,7 @@
     <div class="scrap-photo rotate4"><img src="layout/Pic24.jpeg"><span class="tape"></span></div>
     <div class="scrap-photo rotate1"><img src="layout/Pic25.jpeg"><span class="tape"></span></div>
     <!-- 25–26 -->
-    <div class="scrap-photo rotate2"><img src="layout/Pic26.jpeg"><span class="tape"></span></div>
+    <div class="scrap-photo rotate2"><img src="layout/pic26.jpeg"><span class="tape"></span></div>
     <div class="scrap-photo rotate3"><img src="layout/Pic27.jpeg"><span class="tape"></span></div>
     <div class="scrap-photo rotate4"><img src="layout/Pic28.jpg"><span class="tape"></span><div>
     
