--- a/golden.html
+++ b/golden.html
@@ -51,7 +51,7 @@
 </div>
 
 <video controls width="600">
-  <source src="video/Golden.mp4" type="video/mp4">
+  <source src="Video/Golden.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
