--- a/prayer.html
+++ b/prayer.html
@@ -51,7 +51,7 @@
 </div>
 
 <video controls width="600">
-  <source src="video/Prayer.mp4" type="video/mp4">
+  <source src="Video/Prayer.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
