--- a/baby.html
+++ b/baby.html
@@ -50,7 +50,7 @@
   <p>Sweet, sentimental journals for capturing the milestones, memories, and precious moments of a baby's first years.</p>
 </div>
 
-<video controls width="600">
+<video controls playsinline preload="metadata" style="width:100%; max-width:600px;">
   <source src="Video/Baby.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
