--- a/golden.html
+++ b/golden.html
@@ -50,10 +50,11 @@
   <p>Creative journals made from vintage and beloved Little Golden Books — perfect for memory keeping, themed projects, and unique gifts.</p>
 </div>
 
-<video controls width="600">
+<video controls playsinline preload="metadata" style="width:100%; max-width:600px;">
   <source src="Video/Golden.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+
 
 
 <footer style="text-align:center; padding:20px; color:#555;">
