--- a/prayer.html
+++ b/prayer.html
@@ -50,10 +50,11 @@
   <p>Meaningful journals designed for reflection, devotion, gratitude, and spiritual growth.</p>
 </div>
 
-<video controls width="600">
+<video controls playsinline preload="metadata" style="width:100%; max-width:600px;">
   <source src="Video/Prayer.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+
 
 
 <footer style="text-align:center; padding:20px; color:#555;">
