--- a/baby.html
+++ b/baby.html
@@ -51,7 +51,7 @@
 </div>
 
 <video controls playsinline preload="metadata" style="width:100%; max-width:600px;">
-  <source src="../Video/Baby.mp4" type="video/mp4">
+  <source src="Video/Baby.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
