--- a/contact.html
+++ b/contact.html
@@ -7,22 +7,33 @@
   <link rel="stylesheet" href="css-style.css">
 </head>
 
+<script>
+  function toggleNav() {
+    const nav = document.getElementById("mainNav");
+    nav.classList.toggle("open");
+  }
+</script>
+
 <body style="margin:0; font-family: Arial, sans-serif; background:#f1e3ea;">
 
 <header>
   <div class="nav-wrapper">
-    <button class="nav-toggle" aria-label="Toggle navigation">
+    <!-- ADD onclick -->
+    <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleNav()">
       ☰
     </button>
 
-    <nav class="navbar">
+    <!-- ADD id -->
+    <nav class="navbar" id="mainNav">
       <a href="index.html">Home</a>
       <a href="videos.html">Videos</a>
       <a href="gallery.html">Gallery</a>
       <a href="blog.html">Blog</a>
 
-     <div class="dropdown">
-        <button class="dropbtn">Junk Journals ▼</button>
+      <div class="dropdown">
+        <button class="dropbtn" onclick="event.preventDefault()">
+          Junk Journals ▼
+        </button>
         <div class="dropdown-content">
           <a href="travel.html">Travel Journals</a>
           <a href="baby.html">Baby Journals</a>
@@ -42,8 +53,9 @@
     <img src="Crafty Life.JPEG" alt="Sharon's Crafty Life Logo" style="width:300px; max-width:100%;">
   </div>
 
-  <h1 style="text-align:center; padding:20px;">Contact</h1>
+  <h1 style="text-align:center; padding:20px;">About</h1>
 </header>
+
 
 
 <div class="container" style="max-width:900px; margin:40px auto; padding:20px; background:#e4a6d4; border-radius:12px;">
