--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,13 @@
   }
 </script>
 
+<script>
+  function toggleNav() {
+    const nav = document.getElementById("mainNav");
+    nav.classList.toggle("open");
+  }
+</script>
+
 <body style="margin:0; font-family: Arial, sans-serif; background:#f1e3ea;">
 
 <header>
@@ -55,8 +62,6 @@
 
   <h1 style="text-align:center; padding:20px;">About</h1>
 </header>
-
-
 
 <div class="container" style="max-width:900px; margin:40px auto; padding:20px; background:#e4a6d4; border-radius:12px;">
 
