--- a/junk journals.html
+++ b/junk journals.html
@@ -6,22 +6,33 @@
   <title>Junk Journals | Sharon's Crafty Life</title>
 </head>
 
+<script>
+  function toggleNav() {
+    const nav = document.getElementById("mainNav");
+    nav.classList.toggle("open");
+  }
+</script>
+
 <body style="margin:0; font-family: Arial, sans-serif; background:#f1e3ea;">
 
 <header>
   <div class="nav-wrapper">
-    <button class="nav-toggle" aria-label="Toggle navigation">
+    <!-- ADD onclick -->
+    <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleNav()">
       ☰
     </button>
 
-    <nav class="navbar">
+    <!-- ADD id -->
+    <nav class="navbar" id="mainNav">
       <a href="index.html">Home</a>
       <a href="videos.html">Videos</a>
       <a href="gallery.html">Gallery</a>
       <a href="blog.html">Blog</a>
 
       <div class="dropdown">
-        <button class="dropbtn">Junk Journals ▼</button>
+        <button class="dropbtn" onclick="event.preventDefault()">
+          Junk Journals ▼
+        </button>
         <div class="dropdown-content">
           <a href="travel.html">Travel Journals</a>
           <a href="baby.html">Baby Journals</a>
@@ -41,8 +52,9 @@
     <img src="Crafty Life.JPEG" alt="Sharon's Crafty Life Logo" style="width:300px; max-width:100%;">
   </div>
 
-  <h1 style="text-align:center; padding:20px;">Junk Journals</h1>
+  <h1 style="text-align:center; padding:20px;">About</h1>
 </header>
+
 
 
 <div class="container" 
