--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     <img src="Crafty Life.JPEG" alt="Sharon's Crafty Life Logo" style="width:300px; max-width:100%;">
   </div>
 
-  <h1 style="text-align:center; padding:20px;">About</h1>
+  <h1 style="text-align:center; padding:20px;">Contact</h1>
 </header>
 
 <div class="container" style="max-width:900px; margin:40px auto; padding:20px; background:#e4a6d4; border-radius:12px;">
