--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
     <img src="Crafty Life.JPEG" alt="Sharon's Crafty Life Logo" style="width:300px; max-width:100%;">
   </div>
 
-  <h1 style="text-align:center; padding:20px;">About</h1>
+  <h1 style="text-align:center; padding:20px;">Gallery</h1>
 </header>
 
 
