--- a/shop.html
+++ b/shop.html
@@ -53,7 +53,7 @@
     <img src="Crafty Life.JPEG" alt="Sharon's Crafty Life Logo" style="width:300px; max-width:100%;">
   </div>
 
-  <h1 style="text-align:center; padding:20px;">About</h1>
+  <h1 style="text-align:center; padding:20px;">Shop</h1>
 </header>
 
 <div class="container" style="max-width:900px; margin:40px auto; background:white; padding:20px; border-radius:12px;">
