--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <img src="Crafty Life.JPEG" alt="Sharon's Crafty Life Logo" style="width:300px; max-width:100%;">
   </div>
 
-  <h1 style="text-align:center; padding:20px;">Home</h1>
+  <h1 style="text-align:center; padding:20px;">About</h1>
 </header>
 
 
