--- a/videos.html
+++ b/videos.html
@@ -62,11 +62,37 @@
 
   <div style="display:flex; flex-direction:column; gap:30px; align-items:center;">
 
-    <a href="https://www.youtube.com/watch?v=sNS5ERezN-g" target="_blank">
-      <img src="https://img.youtube.com/vi/sNS5ERezN-g/hqdefault.jpg" 
-           alt="YouTube Thumbnail" style="max-width:100%; border-radius:10px;">
-    </a>
+    <div class="share-wrapper rotate2">
+  <span class="tape"></span>
+   <h1 style="text-align:center; padding:20px;">Fun Fold Christmas Card</h1>
+    </div>
+ <div style="max-width:800px; margin:40px auto;">
+  <iframe
+    width="100%"
+    height="450"
+    src="https://www.youtube.com/embed/sNS5ERezN-g"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</div>
 
+ <div class="share-wrapper rotate2">
+  <span class="tape"></span>
+   <h1 style="text-align:center; padding:20px;">A Quick Card Using A Child is Born</h1>
+    </div>
+ <div style="max-width:800px; margin:40px auto;">
+  <iframe
+    width="100%"
+    height="450"
+    src="https://www.youtube.com/embed/4qlhRE2WFms?si=ZK_i5e3z8-lLCanR"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</div>
     <a href="https://www.youtube.com/watch?v=4qlhRE2WFms" target="_blank">
       <img src="https://img.youtube.com/vi/4qlhRE2WFms/hqdefault.jpg" 
            alt="YouTube Thumbnail" style="max-width:100%; border-radius:10px;">
