--- a/videos.html
+++ b/videos.html
@@ -64,7 +64,7 @@
 
     <div class="share-wrapper rotate2">
   <span class="tape"></span>
-   <h1 style="text-align:center; padding:20px;">Fun Fold Christmas Card</h1>
+   <h1 style="text-align:center; padding:20px;">Fun Fold Christmas Card with Modern Christmas DSP from Stampin Up!®️</h1>
     </div>
  <div style="max-width:800px; margin:40px auto;">
   <iframe
@@ -80,7 +80,7 @@
 
  <div class="share-wrapper rotate2">
   <span class="tape"></span>
-   <h1 style="text-align:center; padding:20px;">A Quick Card Using A Child is Born</h1>
+   <h1 style="text-align:center; padding:20px;">A Quick Card Using A Child is Born Stamp Set from Stampin Up!®️</h1>
     </div>
  <div style="max-width:800px; margin:40px auto;">
   <iframe
@@ -93,18 +93,21 @@
     allowfullscreen>
   </iframe>
 </div>
-    <a href="https://www.youtube.com/watch?v=4qlhRE2WFms" target="_blank">
-      <img src="https://img.youtube.com/vi/4qlhRE2WFms/hqdefault.jpg" 
-           alt="YouTube Thumbnail" style="max-width:100%; border-radius:10px;">
-    </a>
 
-    <a href="https://www.youtube.com/watch?v=8paoDhr2u2Q" target="_blank">
-      <img src="https://img.youtube.com/vi/8paoDhr2u2Q/hqdefault.jpg" 
-           alt="YouTube Thumbnail" style="max-width:100%; border-radius:10px;">
-    </a>
-
-  </div>
-
+ <div class="share-wrapper rotate2">
+  <span class="tape"></span>
+   <h1 style="text-align:center; padding:20px;">Making a Fall Card with Beautiful Pumpkins!</h1>
+    </div>
+ <div style="max-width:800px; margin:40px auto;">
+  <iframe
+    width="100%"
+    height="450"
+    src="https://www.youtube.com/embed/8paoDhr2u2Q?si=Y2zgwV4iiT_VVRjZ"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
 </div>
 
 <footer style="text-align:center; padding:20px; color:#555;">
