--- a/videos.html
+++ b/videos.html
@@ -64,7 +64,7 @@
 
     <div class="share-wrapper rotate2">
   <span class="tape"></span>
-   <h1 style="text-align:center; padding:20px;">Fun Fold Christmas Card with Modern Christmas DSP from Stampin Up!®️</h1>
+   <h1 style="text-align:center; padding:20px; font-family: Arial, Helvetica, sans-serif;">Fun Fold Christmas Card with Modern Christmas DSP from Stampin Up!®️</h1>
     </div>
  <div style="max-width:800px; margin:40px auto;">
   <iframe
@@ -80,7 +80,7 @@
 
  <div class="share-wrapper rotate2">
   <span class="tape"></span>
-   <h1 style="text-align:center; padding:20px;">A Quick Card Using A Child is Born Stamp Set from Stampin Up!®️</h1>
+   <h1 style="text-align:center; padding:20px; font-family: Arial, Helvetica, sans-serif;">A Quick Card Using A Child is Born Stamp Set from Stampin Up!®️</h1>
     </div>
  <div style="max-width:800px; margin:40px auto;">
   <iframe
@@ -96,7 +96,7 @@
 
  <div class="share-wrapper rotate2">
   <span class="tape"></span>
-   <h1 style="text-align:center; padding:20px;">Making a Fall Card with Beautiful Pumpkins!</h1>
+   <h1 style="text-align:center; padding:20px; font-family: Arial, Helvetica, sans-serif;">Making a Fall Card with Beautiful Pumpkins!</h1>
     </div>
  <div style="max-width:800px; margin:40px auto;">
   <iframe
