--- a/videos.html
+++ b/videos.html
@@ -110,6 +110,22 @@
   </iframe>
 </div>
 
+ <div class="share-wrapper rotate2">
+  <span class="tape"></span>
+   <h1 style="text-align:center; padding:20px; font-family: Arial, Helvetica, sans-serif;">Fun Fold Christmas Card</h1>
+    </div>
+ <div style="max-width:800px; margin:40px auto;">
+  <iframe
+    width="100%"
+    height="450"
+    src="https://www.youtube.com/embed/jy0ds68jjo8?si=5svuFOe2nNyX4Qnu"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</div>
+
 <footer style="text-align:center; padding:20px; color:#555;">
   © 2025 Craft Vlog & Stampin' Up! Demonstrator
 </footer>
